[project]
name = "questionerbot"
version = "0.1.0"
description = "Бот-вопросник"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stp-database @ git+https://git@github.com/ERTG-BOTS/stp-database.git",
    "aiogram>=3.21.0",
    "aiomysql>=0.2.0",
    "aioodbc>=0.5.0",
    "alembic>=1.14.0",
    "apscheduler>=3.11.0",
    "betterlogging>=1.0.0",
    "environs>=14.2.0",
    "google-api-python-client>=2.177.0",
    "gspread>=6.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["D417", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
